--- a/src/styles.css
+++ b/src/styles.css
@@ -1382,3 +1382,23 @@ img {
     0 -4px 20px rgba(0, 0, 0, 0);
   transition: box-shadow 0.3s ease-in-out;
 }
+.invalid-field{
+  color: red;
+}
+#btn-send-msg{
+  border: none;
+}
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #4CAF50;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
